fixed nav and content being clipped by the fixed nav

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,5 @@
 #myprofile {
+  margin-top: 120px;
   height: 400px;
   width: 100%;
   display: flex;
@@ -6,7 +7,7 @@
   align-items: center;
   justify-content: center;
   background-color: #d89820;
-  background-image: #FFFDD0
+  background-image: #FFFDD0;
 }
 
 h2 {
